--- a/packages/frontend/src/features/Design/components/Interactive/inputs/Text/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/inputs/Text/index.module.css
@@ -1,5 +1,6 @@
 .text-field-label {
     display: flex;
+    align-items: center;
     gap: 8px;
 
     text-wrap: nowrap;
